2010-03-04  Simon Fraser  <simon.fraser@apple.com>

        Build fix.

        Delcare updateFocusCandidateIfCloser static to avoid warning.

        * page/FocusController.cpp:
        (WebCore::updateFocusCandidateIfCloser):

2010-03-04  Darin Fisher  <darin@chromium.org>

        Reviewed by Dmitry Titov.

        [chromium] make history.{push,replace}State enabled at runtime
        https://bugs.webkit.org/show_bug.cgi?id=35753

        * bindings/generic/RuntimeEnabledFeatures.cpp:
        * bindings/generic/RuntimeEnabledFeatures.h:
        (WebCore::RuntimeEnabledFeatures::setPushStateEnabled):
        (WebCore::RuntimeEnabledFeatures::pushStateEnabled):
        (WebCore::RuntimeEnabledFeatures::replaceStateEnabled):
        * page/History.idl:

2010-03-04  Antonio Gomes  <tonikitoo@webkit.org>

        Unreviewed attempt to (again) fix Mac build.

        * page/SpatialNavigation.cpp:
        (WebCore::spatialDistance):

2010-03-04  Dan Bernstein  <mitz@apple.com>

        Based on a patch from Nick Jong.

        Reviewed by Simon Fraser.

        Improve selection in multi-column blocks when hitting points above or
        below a column rect.

        Test: fast/multicol/hit-test-above-or-below.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::adjustPointToColumnContents): If the point lies
        within the horizontal range for a column, constrain it to the column (if
        it is above) or the next column (if it is below).

2010-03-04  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Simon Fraser.

        Attempt to fix Mac build.

        * page/SpatialNavigation.cpp:

2010-03-04  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        Add SpatialNavigation header and cpp to Mac XCode project file.

        Reviewed by Kenneth Christiansen.

        * WebCore.xcodeproj/project.pbxproj:

2010-03-02  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Simon Fraser, Eric Seidel and Darin Adler.